syntax = "proto3";

package logwatcher;

option go_package = "./logwatcher";

service LogWatcher {
  rpc StreamLogs(AuthRequest) returns (stream LogEntry);
  rpc StreamEvents(AuthRequest) returns (stream EventEntry);
}

message AuthRequest {
  string token = 1;
}

message LogEntry {
  string content = 1;
}

message EventEntry {
  string event = 1;
  string data = 2;
}
